# ravestate

./: .coverage  .coveragerc  .dockerignore  .gitignore  .travis.yml  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.in  README.md  codecov.yml  deploy.sh  docker-compose.yml  docker-entrypoint.sh  pydocmd.yml  rasta  requirements-dev.txt  requirements.txt  requirements2.txt  run.py  run.sh  run_ffmpeg_stream.sh  run_hello_world.sh  run_tests.sh  setup.py  setup_reggol.py  test.py  unittests.py
config/: charades.yml  finals_march_19.yml  funboy.yml  generic.yml  genqa_hello_world.yml  gpt3.yml  hello_world.yml  keys.donotcommit.yml  raveboard.yml  roboy.yml  roboy_telegram_bot_child.yml  roboy_telegram_bot_master.yml  roboyqa_hello_world.yml  telegram_generic.yml  telegram_hello_world.yml  telegram_test.yml  visionio-docker.yml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/config/: index.html
docs/context/: index.html
docs/general/: sentence_processing_and_feature_extraction_techniques_for_luigi.md
docs/modules/: index.html
docs/nlp/: index.html
docs/properties/: index.html
docs/search/: search_index.json
docs/states/: index.html
modules/dialogic/: activation.py  context.py  icontext.py  isession.py  module.py  property.py  receptor.py  registry.py  session.py  state.py  wrappers.py
modules/dialogic_consoleio/: __init__.py
modules/ros2_vision/src/face_recognition/: package.xml  setup.cfg  setup.py
modules/ros2_vision/src/face_recognition/examples/: facerec_ros_webcam.py
reggol/: __init__.py  config.ini  logger.py
test/: .coverage
(+350 files in other folders)
