<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>face_recognition</name>
  <version>1.2.3</version>
  <description>Recognize faces from Python or from the command line</description>

  <maintainer email="ageitgey@gmail.com">Adam Geitgey</maintainer>
  <license>MIT license</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-Pillow</exec_depend>
  <exec_depend>python3-dlib</exec_depend>
  <exec_depend>python3-Click</exec_depend>
  <exec_depend>python3-face_recognition_models</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
